--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,28 @@
     "name": "ceus-media/php-parser",
     "description": "PHP parser written in PHP",
     "type": "library",
+    "license": [
+        "GPL-3.0-or-later"
+    ],
     "require": {
         "ceus-media/common": "dev-master"
     },
     "authors": [
         {
             "name": "Christian Würker",
-            "email": "christian.wuerker@ceusmedia.de"
+            "email": "christian.wuerker@ceusmedia.de",
+            "homepage": "https://ceusmedia.de/",
+            "role": "Developer"
         }
     ],
-    "minimum-stability": "dev"
+    "support": {
+        "email": "office@ceusmedia.de",
+        "jabber": "cwuerker@ceusmedia.de"
+    },
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "CeusMedia\\PhpParser\\": ["src/"]
+        }
+    }
 }
