--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
         "psr-4": {
             "CeusMedia\\PhpParser\\": ["src/"]
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5@dev"
     }
 }
