--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,6 @@
     "license": [
         "GPL-3.0-or-later"
     ],
-    "require": {
-        "ceus-media/common": "dev-master"
-    },
     "authors": [
         {
             "name": "Christian Würker",
@@ -20,13 +17,16 @@
         "email": "office@ceusmedia.de",
         "jabber": "cwuerker@ceusmedia.de"
     },
+    "require": {
+        "ceus-media/common": "^0.8 | dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5@dev"
+    },
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "CeusMedia\\PhpParser\\": ["src/"]
         }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5@dev"
     }
 }
