--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
         "jabber": "cwuerker@ceusmedia.de"
     },
     "require": {
-        "ceus-media/common": "^0.8 | dev-master"
+        "ceus-media/common": "^0.9 | ^0.9@dev | ^0.8 | dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5@dev",
-        "phpstan/phpstan": "0.12.x-dev",
-        "phpstan/phpstan-strict-rules": "0.12.x-dev"
+        "phpstan/phpstan": "*",
+        "phpstan/phpstan-strict-rules": "*"
     },
     "minimum-stability": "dev",
     "autoload": {
