--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "jabber": "cwuerker@ceusmedia.de"
     },
     "require": {
-        "ceus-media/common": "^0.9 | ^0.9@dev | ^0.8 | dev-master"
+        "ceus-media/common": "^1.0 | 1.0@dev | ^0.9 | ^0.9@dev | ^0.8 | dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5@dev",
