--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,48 @@
         "psr-4": {
             "CeusMedia\\PhpParser\\": ["src/"]
         }
+    },
+    "scripts": {
+        "dev:install-quiet": "composer install --quiet",
+        "dev:update-quiet": "composer update --quiet",
+        "dev:phpunit": [
+            "@dev:install-quiet",
+            "php vendor/bin/phpunit --configuration util/phpunit.xml --testsuite default"
+        ],
+        "dev:phpstan": [
+            "@dev:install-quiet",
+            "vendor/bin/phpstan analyze --configuration=util/phpstan.neon --memory-limit=1G --xdebug --verbose"
+        ],
+        "dev:phpstan-clear": [
+            "@dev:install-quiet",
+            "vendor/bin/phpstan clear-result-cache --verbose"
+        ],
+        "dev:phpstan-save": [
+            "@dev:install-quiet",
+            "vendor/bin/phpstan analyse --configuration util/phpstan.neon --generate-baseline util/phpstan-baseline.neon --xdebug --verbose"
+        ],
+        "dev:rector": [
+            "@dev:install-quiet",
+            "vendor/bin/rector process --config=util/rector.php --dry-run"
+        ],
+        "dev:rector-fix": [
+            "@dev:install-quiet",
+            "vendor/bin/rector process --config=util/rector.php"
+        ],
+        "dev:test-syntax": [
+            "@dev:install-quiet",
+            "vendor/bin/parallel-lint . -j 10 --colors --exclude vendor"
+        ]
+    },
+    "scripts-descriptions": {
+        "dev:install": "Installs project dependencies for Development stage",
+        "dev:update": "Updates project dependencies for Development stage",
+        "dev:unit": "Run unit tests",
+        "dev:phpstan": "Validate codebase with PHPStan",
+        "dev:phpstan-clear": "Clear PHPStan cache",
+        "dev:phpstan-save": "Store current results in ignore list",
+        "dev:rector": "Shows suggestions of configured Rector rules",
+        "dev:rector-fix": "Apply currently configured Rector rules to codebase",
+        "dev:test-syntax": "Validate code base syntax using PHP linter"
     }
 }
