--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
         "jabber": "cwuerker@ceusmedia.de"
     },
     "require": {
-        "php": "^7.4 | ^8.1",
-        "ceus-media/common": "^1.0 | 1.0@dev | ^0.9 | ^0.9@dev | dev-master"
+        "php": "^8.1",
+        "ext-zlib": "*",
+        "ceus-media/common": "^1.0 | 1.0@dev | dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5 | ^10",
