--- a/util/phpstan.neon
+++ b/util/phpstan.neon
@@ -1,11 +1,12 @@
 includes:
-#	- vendor/phpstan/phpstan-strict-rules/rules.neon
+#	- ../vendor/phpstan/phpstan-strict-rules/rules.neon
 	- phpstan-baseline.neon
 
 parameters:
 	phpVersion: 80100
-	level: 6
+	level: max
 	paths:
 		- ../src
 	checkMissingIterableValueType: false
+	checkGenericClassInNonGenericObjectType: false
 	treatPhpDocTypesAsCertain: false
