--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     "require": {
         "php": "^8.1",
         "ext-zlib": "*",
-        "ceus-media/common": "^1.0 | 1.0@dev | dev-master"
+        "ceus-media/common": "^1.0 | 1.0.x-dev"
     },
     "require-dev": {
-        "ceus-media/doc-creator": "^0.9.6 | 0.9.x-dev | dev-master",
-        "phpunit/phpunit": "^9.5 | ^10",
+        "ceus-media/doc-creator": "^1.0 | 1.0.x-dev",
+        "phpunit/phpunit": "^10",
         "phpstan/phpstan": "^1",
         "phpstan/phpstan-strict-rules": "^1",
         "php-parallel-lint/php-parallel-lint": "^1.3 | dev-master"
