--- a/util/phpstan.neon
+++ b/util/phpstan.neon
@@ -3,7 +3,7 @@ includes:
 	- phpstan-baseline.neon
 
 parameters:
-	phpVersion: 80100
+	phpVersion: 80300
 	level: 6
 	paths:
 		- ../src
@@ -13,7 +13,5 @@ parameters:
 		- ../test/Parser/TestClass.php
 	treatPhpDocTypesAsCertain: false
 	ignoreErrors:
-		-
-			identifier: missingType.generics
-		-
-			identifier: missingType.iterableValue
+		- identifier: missingType.generics
+		- identifier: missingType.iterableValue
